--- a/react-layout/src/css/Footer.css
+++ b/react-layout/src/css/Footer.css
@@ -1,18 +1,15 @@
-/* Footer.css */
-
 footer {
     padding: 20px;
     background-color: var(--header-background);
     color: var(--text-color);
     text-align: center;
     width: 100%;
-    margin-top: 40px;
     box-sizing: border-box;
+    margin-top: auto;
 }
 
 footer p {
     margin: 0;
     width: 100%;
     text-align: center;
-    display: inline-block;
 }
